--- a/ticketteamdispatcherplugin/0.11/ttd/templates/team_dispatcher_admin.html
+++ b/ticketteamdispatcherplugin/0.11/ttd/templates/team_dispatcher_admin.html
@@ -47,7 +47,7 @@
         <div class="field">
           <label>Subject:
             <select id="subject" name="subject">
-              <option py:for="user in sorted(users)">$user.username</option>
+              <option py:for="user in sorted(users, key=lambda u: u.username)">$user.username</option>
             </select>
           </label>
         </div>
