--- a/ticketteamdispatcherplugin/0.11/ttd/templates/team_dispatcher_admin.html
+++ b/ticketteamdispatcherplugin/0.11/ttd/templates/team_dispatcher_admin.html
@@ -96,7 +96,7 @@
 
     <h3>Team Membership</h3>
     <form method="post" action="">
-      <table id="teamlist" class="listing">
+      <table id="grouplist" class="listing">
         <thead>
           <tr><th>Team</th><th>Subject</th></tr>
         </thead>
