ThemeEnginePlugin [ refs #11455 ] : Mark button captions for translation . Update .pot file
git-svn-id: http://trac-hacks.org/svn@13646 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/themeengineplugin/trunk/themeengine/templates/admin_theme.html
+++ b/themeengineplugin/trunk/themeengine/templates/admin_theme.html
@@ -12,6 +12,9 @@
       xmlns:i18n="http://genshi.edgewall.org/i18n"
       i18n:domain="themeengine">
       <xi:include href="admin.html" />      
+  <?python
+    if _dgettext is not None:
+        dgettext = _dgettext ?>
   <head>
     <title>Theme</title>
   </head>
@@ -44,7 +47,7 @@
       <div id="themebuttons">
         <img src="${href.chrome('themeengine', 'img', 'next.gif')}" border="0" id="nextbutton" />
         <img src="${href.chrome('themeengine', 'img', 'prev.gif')}" border="0" id="prevbutton" />
-        <input type="submit" value="Use this theme" class="${'btn' if bhdb else None}"/>
+        <input type="submit" value="${dgettext('themeengine', 'Use this theme')}" class="${'btn' if bhdb else None}"/>
       </div>
     </form>
   
