--- a/themeengineplugin/trunk/themeengine/templates/admin_theme_custom.html
+++ b/themeengineplugin/trunk/themeengine/templates/admin_theme_custom.html
@@ -12,6 +12,9 @@
       xmlns:i18n="http://genshi.edgewall.org/i18n"
       i18n:domain="themeengine">
       <xi:include href="admin.html" />
+  <?python
+    if _dgettext is not None:
+        dgettext = _dgettext ?>
   <head>
     <title>Custom theme</title>
     <style type="text/css" media="screen"></style>
@@ -136,7 +139,7 @@
         </div>
       </fieldset>
       <div class="buttons">
-        <input type="submit" value="Submit" class="${'btn' if bhdb else None}" />
+        <input type="submit" value="${dgettext('themeengine', 'Submit')}" class="${'btn' if bhdb else None}" />
       </div>
     </form>
   </body>
