--- a/estimationtoolsplugin/trunk/estimationtools/templates/edithours.html
+++ b/estimationtoolsplugin/trunk/estimationtools/templates/edithours.html
@@ -1,7 +1,7 @@
 <script type="text/javascript" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:xi="http://www.w3.org/2001/XInclude"
       xmlns:py="http://genshi.edgewall.org/" py:strip="">
-$(document).ready(function() {
+jQuery(document).ready(function($) {
     var estimationField = '${data.field}';
     var xmlrpcPath = '${req.href.xmlrpc()}';
     // 'td.ticket' used in reports, 'td.id' used in queries
