--- a/estimationtoolsplugin/trunk/estimationtools/templates/edithours.html
+++ b/estimationtoolsplugin/trunk/estimationtools/templates/edithours.html
@@ -7,39 +7,40 @@ jQuery(document).ready(function($) {
     // 'td.ticket' used in reports, 'td.id' used in queries
     $('table.tickets td.id, table.tickets td.ticket').each(function(i) {
       var id = jQuery.trim($(this).text()).substr(1);
-      var estimationCell = $('td.' + estimationField).eq(i);
-      estimationCell.editable(function(value, settings) {
-        var currentElement = this;
-        value = $.trim(value);
-        if (value == settings.data | isNaN(parseFloat(value))) {
-          return(settings.data);
+      var estimationCell = $(this).parent().find('td.' + estimationField);
+      if (estimationCell.length == 1) {
+       estimationCell.editable(function(value, settings) {
+       var currentElement = this;
+       value = $.trim(value);
+       if (value == settings.data | isNaN(parseFloat(value))) {
+         return(settings.data);
         }
         $.ajax({
           type: 'POST',
           url: xmlrpcPath,
           data: '<methodCall><methodName>ticket.update</methodName>' +
-                '<params><param><value><int>' + id + '</int></value></param>' +
-                '<param><value><string></string></value></param>' +
-                '<param><value><struct><member><name>' + estimationField + '</name>' +
-                '<value><string>' + value + '</string></value></member></struct></value></param>' +
-                '</params></methodCall>',
-                contentType: 'text/xml',
-          success: function() {
-            $(currentElement).text(value);
-            settings.data = value;
-          }
+                  '<params><param><value><int>' + id + '</int></value></param>' +
+                  '<param><value><string></string></value></param>' +
+                  '<param><value><struct><member><name>' + estimationField + '</name>' +
+                  '<value><string>' + value + '</string></value></member></struct></value></param>' +
+                  '</params></methodCall>',
+                  contentType: 'text/xml',
+            success: function() {
+              $(currentElement).text(value);
+              settings.data = value;
+            }
+          });
+          return('Saving...');
+         }, {
+           data : jQuery.trim(estimationCell.text()),
+           tooltip   : 'Click to edit...',
+           placeholder: '',
+           onblur : 'submit',
+           select : 'true',
+           style : 'inherit',
+           width     : 60
         });
-        return('Saving...');
-       }, {
-         data : jQuery.trim(estimationCell.text()),
-         tooltip   : 'Click to edit...',
-         placeholder: '',
-         onblur : 'submit',
-         select : 'true',
-         style : 'inherit',
-         width     : 60
-      }); 
+	  }
     });
  });
  </script>
- 
