ThemeEnginePlugin [ fixes #11638 ] Remove x if c else y expressions from templates
git-svn-id: http://trac-hacks.org/svn@13788 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/themeengineplugin/trunk/themeengine/templates/admin_theme.html
+++ b/themeengineplugin/trunk/themeengine/templates/admin_theme.html
@@ -47,7 +47,7 @@
       <div id="themebuttons">
         <img src="${href.chrome('themeengine', 'img', 'next.gif')}" border="0" id="nextbutton" />
         <img src="${href.chrome('themeengine', 'img', 'prev.gif')}" border="0" id="prevbutton" />
-        <input type="submit" value="${dgettext('themeengine', 'Use this theme')}" class="${'btn' if bhdb else None}"/>
+        <input type="submit" value="${dgettext('themeengine', 'Use this theme')}" class="${bhdb and 'btn' or None}"/>
       </div>
     </form>
   
