TagsPlugin: Add license headers to HTML templates, change minimal Trac version check, refs #11690.
Component dependency checks are better performed at runtime, and Genshi is
required for Trac anyway.

Following Ryan's recommendation in http://trac-hacks.org/wiki/DevGuide.

git-svn-id: http://trac-hacks.org/svn@13859 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/tagsplugin/trunk/tractags/templates/admin_tag_change.html
+++ b/tagsplugin/trunk/tractags/templates/admin_tag_change.html
@@ -6,6 +6,12 @@
       xmlns:xi="http://www.w3.org/2001/XInclude"
       xmlns:i18n="http://genshi.edgewall.org/i18n"
       i18n:domain="tractags">
+  <!--!
+    Copyright (C) 2011-2013 Steffen Hoffmann <hoff.st@web.de>
+
+    This software is licensed as described in the file COPYING, which
+    you should have received as part of this distribution.
+  -->
   <xi:include href="admin.html" />
   <?python
     from tractags.api import _ ?>
