--- a/tagsplugin/trunk/tractags/templates/tag_view.html
+++ b/tagsplugin/trunk/tractags/templates/tag_view.html
@@ -6,6 +6,13 @@
       xmlns:xi="http://www.w3.org/2001/XInclude"      
       xmlns:i18n="http://genshi.edgewall.org/i18n"
       i18n:domain="tractags">
+  <!--!
+    Copyright (C) 2006 Alec Thomas <alec@swapoff.org>
+    Copyright (C) 2010-2013 Steffen Hoffmann <hoff.st@web.de>
+
+    This software is licensed as described in the file COPYING, which
+    you should have received as part of this distribution.
+  -->
   <xi:include href="layout.html" />
   <xi:include href="macros.html" />
   <?python
