--- a/discussionplugin/0.11/tracdiscussion/templates/discussion-macros.html
+++ b/discussionplugin/0.11/tracdiscussion/templates/discussion-macros.html
@@ -259,7 +259,7 @@
   <py:def function="display_form(href, title, Class, action)">
     <a name="reply" ></a>
     <form class="${Class}" method="post" action="${href}#${discussion.message.id
-      and ('message' + unicode(discussion.message.id)) or 'topic'}">
+      and ('message_' + unicode(discussion.message.id)) or 'topic'}">
       <fieldset>
         <legend>
           ${title}
@@ -345,7 +345,7 @@
       <py:with vars="is_message_edit = (str(req.args.message) == str(
         message.id)) and (req.args.discussion_action in ('edit', 'post-edit'))
         and not req.args.submit;">
-        <a name="message${message.id}"></a>
+        <a name="message_${message.id}"></a>
         <div class="id">
           Message #${message.id}
         </div>
@@ -364,16 +364,16 @@
           <py:if test="'DISCUSSION_APPEND' in perm">
             <a style="${'display: none;' if 'locked' in discussion.topic.status
               else ''}" class="reply"
-              href="${href}?discussion_action=add;message=${message.id}#message${message.id}">
+              href="${href}?discussion_action=add;message=${message.id}#message_${message.id}">
               Reply</a>
             <a style="${'display: none;' if 'locked' in discussion.topic.status
               else ''}" class="quote"
-              href="${href}?discussion_action=quote;message=${message.id}#message${message.id}">
+              href="${href}?discussion_action=quote;message=${message.id}#message_${message.id}">
               Quote</a>
             <a py:if="discussion.moderator or ((discussion.authname ==
               message.author) and (not 'locked' in discussion.topic.status) and
               (discussion.authname != 'anonymous'))"
-              href="${href}?discussion_action=edit;message=${message.id}#message${message.id}">
+              href="${href}?discussion_action=edit;message=${message.id}#message_${message.id}">
               Edit</a>
           </py:if>
           <a py:if="discussion.moderator"
