--- a/discussionplugin/0.11/tracdiscussion/templates/topic-list-compact.html
+++ b/discussionplugin/0.11/tracdiscussion/templates/topic-list-compact.html
@@ -13,7 +13,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr py:for="line, topic in enumerate(discussion.topics)" class="${'even' if line % 2 else 'odd'} ${'important' if topic.priority > 0 else ''}">
+        <tr py:for="line, topic in enumerate(discussion.topics)" class="${('even', 'odd')[line % 2]} ${topic.priority > 0 and 'important' or ''}">
           <td class="status">
             <div class="status">
               ${display_topic_status(topic.status)}
