DiscussionPlugin: Add license header to Genshi HTML templates making license more obvious here too, refs #11706.
git-svn-id: http://trac-hacks.org/svn@13893 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/discussionplugin/0.11/tracdiscussion/templates/topic-list-classic.html
+++ b/discussionplugin/0.11/tracdiscussion/templates/topic-list-classic.html
@@ -1,4 +1,11 @@
 <html xmlns:py="http://genshi.edgewall.org/" py:strip="">
+  <!--!
+    Copyright (C) 2009-2011 Radek Bartoň <blackhex@post.cz>
+    Copyright (C) 2014 Steffen Hoffmann <hoff.st@web.de>
+
+    This software is licensed as described in the file COPYING, which
+    you should have received as part of this distribution.
+  -->
   <py:choose>
     <table py:when="len(discussion.topics)" class="listing">
       <thead>
