--- a/discussionplugin/0.11/tracdiscussion/templates/admin-forum-list.html
+++ b/discussionplugin/0.11/tracdiscussion/templates/admin-forum-list.html
@@ -3,6 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
   xmlns:xi="http://www.w3.org/2001/XInclude"
   xmlns:py="http://genshi.edgewall.org/">
+  <!--!
+    Copyright (C) 2007-2011 Radek Bartoň <blackhex@post.cz>
+    Copyright (C) 2013 Ryan J Ollos <ryan.j.ollos@gmail.com>
+
+    This software is licensed as described in the file COPYING, which
+    you should have received as part of this distribution.
+  -->
   <xi:include href="discussion-macros.html"/>
   <xi:include href="admin.html"/>
   <head>
