--- a/discussionplugin/0.11/tracdiscussion/templates/discussion-macros.html
+++ b/discussionplugin/0.11/tracdiscussion/templates/discussion-macros.html
@@ -1,5 +1,13 @@
 <html xmlns:xi="http://www.w3.org/2001/XInclude"
   xmlns:py="http://genshi.edgewall.org/" py:strip="">
+  <!--!
+    Copyright (C) 2007-2011 Radek Bartoň <blackhex@post.cz>
+    Copyright (C) 2012 Ryan J Ollos <ryan.j.ollos@gmail.com>
+    Copyright (C) 2014 Steffen Hoffmann <hoff.st@web.de>
+
+    This software is licensed as described in the file COPYING, which
+    you should have received as part of this distribution.
+  -->
   <?python
     from trac.wiki.formatter import format_to_oneliner, format_to_html
     from trac.util.datefmt import format_datetime, pretty_timedelta
