--- a/discussionplugin/0.11/tracdiscussion/templates/topic-list-compact.html
+++ b/discussionplugin/0.11/tracdiscussion/templates/topic-list-compact.html
@@ -1,4 +1,11 @@
 <html xmlns:py="http://genshi.edgewall.org/" py:strip="">
+  <!--!
+    Copyright (C) 2009-2011 Radek Bartoň <blackhex@post.cz>
+    Copyright (C) 2014 Steffen Hoffmann <hoff.st@web.de>
+
+    This software is licensed as described in the file COPYING, which
+    you should have received as part of this distribution.
+  -->
   <py:choose>
     <table py:when="len(discussion.topics)" class="listing">
       <thead>
