--- a/discussionplugin/0.11/tracdiscussion/templates/topic-list.html
+++ b/discussionplugin/0.11/tracdiscussion/templates/topic-list.html
@@ -3,6 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
   xmlns:xi="http://www.w3.org/2001/XInclude"
   xmlns:py="http://genshi.edgewall.org/">
+  <!--!
+    Copyright (C) 2009-2011 Radek Bartoň <blackhex@post.cz>
+
+    This software is licensed as described in the file COPYING, which
+    you should have received as part of this distribution.
+  -->
   <xi:include href="discussion-macros.html"/>
   <xi:include href="layout.html"/>
   <head>
