--- a/discussionplugin/0.11/tracdiscussion/templates/wiki-message-list.html
+++ b/discussionplugin/0.11/tracdiscussion/templates/wiki-message-list.html
@@ -1,4 +1,12 @@
-<div xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:py="http://genshi.edgewall.org/" class="discussion" py:strip="">
+<div xmlns:xi="http://www.w3.org/2001/XInclude"
+  xmlns:py="http://genshi.edgewall.org/"
+  class="discussion" py:strip="">
+  <!--!
+    Copyright (C) 2007-2011 Radek Bartoň <blackhex@post.cz>
+
+    This software is licensed as described in the file COPYING, which
+    you should have received as part of this distribution.
+  -->
   <xi:include href="macros.html"/>
   <xi:include href="discussion-macros.html"/>
   <div id="${discussion.mode}" class="discussion ${discussion.mode}">
