TracTicketFieldsLayoutPlugin: fixed malformed xhtml and added unit tests
git-svn-id: http://trac-hacks.org/svn@13894 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/tracticketfieldslayoutplugin/0.12/tracticketfieldslayout/htdocs/web_ui.css
+++ b/tracticketfieldslayoutplugin/0.12/tracticketfieldslayout/htdocs/web_ui.css
@@ -40,3 +40,5 @@
 .ticketfieldslayout-col-td { width: 30% }
 .ticketfieldslayout-foldable :link,
 .ticketfieldslayout-foldable :visited { padding-left: 16px }
+tbody.collapsed tr { display: none }
+tbody.collapsed tr.ticketfieldslayout-toggle { display: table-row }
