--- a/tracticketfieldslayoutplugin/0.12/tracticketfieldslayout/htdocs/web_ui.css
+++ b/tracticketfieldslayoutplugin/0.12/tracticketfieldslayout/htdocs/web_ui.css
@@ -14,7 +14,7 @@
  box-shadow: none;
 }
 #properties td[colspan="4"] > fieldset {
- margin: 0 0 1em 0;
+ margin: 0;
  padding: 0;
  border: none;
  background: transparent none;
@@ -40,5 +40,5 @@
 .ticketfieldslayout-col-td { width: 30% }
 .ticketfieldslayout-foldable :link,
 .ticketfieldslayout-foldable :visited { padding-left: 16px }
-tbody.collapsed tr { display: none }
-tbody.collapsed tr.ticketfieldslayout-toggle { display: table-row }
+tbody.ticketfieldslayout-collapsed tr { display: none }
+tbody.ticketfieldslayout-collapsed tr.ticketfieldslayout-toggle { display: table-row }
