--- a/analyzeplugin/0.12/analyze/templates/analyze.html
+++ b/analyzeplugin/0.12/analyze/templates/analyze.html
@@ -1,3 +1,10 @@
+<!--!
+  Copyright (C) Rob Guttman <guttman@alum.mit.edu>
+  All rights reserved.
+
+  This software is licensed as described in the file COPYING, which
+  you should have received as part of this distribution.
+-->
 <script type="text/javascript" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:xi="http://www.w3.org/2001/XInclude"
       xmlns:py="http://genshi.edgewall.org/" py:strip="">
