--- a/analyzeplugin/0.12/analyze/templates/analyze.html
+++ b/analyzeplugin/0.12/analyze/templates/analyze.html
@@ -1,5 +1,5 @@
 <!--!
-  Copyright (C) Rob Guttman <guttman@alum.mit.edu>
+  Copyright (C) 2011-2014 Rob Guttman <guttman@alum.mit.edu>
   All rights reserved.
 
   This software is licensed as described in the file COPYING, which
